--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
+certifi==2025.1.31
+charset-normalizer==3.4.1
 exceptiongroup==1.2.2
+idna==3.10
 iniconfig==2.0.0
 packaging==24.2
+pdf2image==1.17.0
+pillow==11.1.0
 pluggy==1.5.0
 pytest==8.3.4
+pytest-asyncio==0.25.3
+requests==2.32.3
+tenacity==9.0.0
 tomli==2.2.1
-
-requests~=2.32.3
-tenacity~=9.0.0
-pdf2image~=1.17.0
-pillow~=11.1.0
+urllib3==2.3.0
