Fixed terraform apply pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ __pycache__
 *.zip
 terraform/.terraform.lock.hcl
 terraform/.terraform
+terraform/terraform.tfstate
+terraform/terraform.tfstate.backup
