--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -13,7 +13,30 @@ env:
 
 
 jobs:
-  terraform:
+  zip:
+    name: "Generate zip"
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Install poppler
+        run: |
+          sudo apt update
+          sudo apt install poppler-utils -y
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+      - name: Generate zip file for packaging
+        run: |
+          rm -rf package && mkdir package
+          pip install -r requirements.txt -t package
+          cp -r lambda/* package/
+          cd package && zip -r ../lambda_function.zip .
+  apply:
+    needs: [ python ]
     if: github.repository != 'hashicorp-education/learn-terraform-github-actions'
     name: "Terraform Apply"
     runs-on: ubuntu-latest
