--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -36,7 +36,7 @@ jobs:
           cp -r lambda/* package/
           cd package && zip -r ../lambda_function.zip .
   apply:
-    needs: [ python ]
+    needs: [ zip ]
     if: github.repository != 'hashicorp-education/learn-terraform-github-actions'
     name: "Terraform Apply"
     runs-on: ubuntu-latest
