--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -57,6 +57,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+      - name: Package
+        run: |
+          chmod +x scripts/package.sh
+          ./scripts/package.sh
       - name: Upload Configuration
         uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
         id: plan-upload
