--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
-      - name: Generate zip file for packaging
+      - name: Package
         run: |
           chmod +x scripts/package.sh
           ./scripts/package.sh
