Fixed packaging script

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,7 +14,7 @@ env:
   TF_CLOUD_ORGANIZATION: "Serverless-Pdf-Extractor-org"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   TF_WORKSPACE: "Serverless-PDF-Workspace"
-  CONFIG_DIRECTORY: "./terraform"
+  CONFIG_DIRECTORY: "${{ github.workspace }}/terraform"
 
 
 jobs:
@@ -67,7 +67,7 @@ jobs:
           ./scripts/package.sh
         working-directory: ${{ github.workspace }}
       - name: Verify Package Directory
-        run: ls -l ${{ github.workspace }}/package
+        run: ls -l ${{ github.workspace }}/terraform/package
       - name: Upload Configuration
         uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
         id: plan-upload
