--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -9,7 +9,7 @@ env:
   TF_CLOUD_ORGANIZATION: "Serverless-Pdf-Extractor-org"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   TF_WORKSPACE: "Serverless-PDF-Workspace"
-  CONFIG_DIRECTORY: "./terraform"
+  CONFIG_DIRECTORY: "terraform"
 
 
 jobs:
@@ -31,6 +31,9 @@ jobs:
         run: |
           chmod +x scripts/package.sh
           ./scripts/package.sh
+        working-directory: ${{ github.workspace }}
+      - name: Verify Package Directory
+        run: ls -l ${{ github.workspace }}/terraform/package
       - name: Upload Configuration
         uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
         id: apply-upload
