--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -34,6 +34,8 @@ jobs:
         working-directory: ${{ github.workspace }}
       - name: Verify Package Directory
         run: ls -l ${{ github.workspace }}/terraform/package
+      - name: Verify Popper Directory
+        run: ls -l ${{ github.workspace }}/terraform/data
       - name: Upload Configuration
         uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
         id: apply-upload
