Fixed poppler not found issue

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .idea
 __pycache__
-*.zip
+lambda_function.zip
 terraform/.terraform.lock.hcl
 terraform/.terraform
 terraform/terraform.tfstate
 terraform/terraform.tfstate.backup
-package
+.venv
